--- a/_sass/base-styles.scss
+++ b/_sass/base-styles.scss
@@ -2,6 +2,19 @@
    SITE-WIDE BASE STYLES
    ========================================================================== */
 
+/* Screen reader only - visually hidden but accessible */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 /* Font display optimization for faster rendering */
 * {
   font-display: swap;
